@@ -2,6 +2,9 @@ $Id$
 
 v0.39.8		26-Jan-2004
 
+	mbcico:
+		Fixed binkp file resync.
+
 
 v0.39.7		14-Jan-2004 - 26-Jan-2004
 
